--- a/docs/community/local-groups.mdx
+++ b/docs/community/local-groups.mdx
@@ -129,3 +129,6 @@ us on [Discord](https://discord.com/invite/ktMAKGBnBs) to add your group.
 
 ### Texas
 - [Austin Mesh](https://austinmesh.org/)
+
+### Hongkong
+- [Lilygo Community - Discord](https://discord.gg/DDrHQCEv)
